# glPrac

./: '  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Project TODO.md  README.md  kuutiomalli.kra  vcpkg.json
Models/: Testi.fbx  cube.fbx
include/: biomemanager.hpp  block.hpp  camera.hpp  chunk.hpp  chunkmanager.hpp  ebo.hpp  logger.hpp  mesh.hpp  modelLoader.hpp  modelloader.hpp  renderer.hpp  shader.h  shader.hpp  texture.hpp  time.hpp  timer.hpp  vao.hpp  vbo.hpp  vertex.hpp
shaders/: fragment.frag  vertex.vert
src/: biomeManager.cpp  block.cpp  camera.cpp  chunk.cpp  chunkmanager.cpp  ebo.cpp  logger.cpp  main.cpp  mesh.cpp  modelLoader.cpp  modelloader.cpp  renderer.cpp  shader.cpp  texture.cpp  time.cpp  timer.cpp  vao.cpp  vbo.cpp
